<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wso2.automation</groupId>
    <artifactId>system-test-framework</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>WSO2 Automation - System Test Framework</name>
    <url>http://maven.apache.org</url>

    <modules>
        <module>core</module>
        <module>samples</module>
        <module>scenario</module>
        <module>tools</module>
    </modules>
    <repositories>
        <repository>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
        <repository>
            <id>wso2-maven2-repository</id>
            <name>WSO2 Maven2 Repository</name>
            <url>http://dist.wso2.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
        </repository>

        <repository>
            <id>maven2-repository-jococo</id>
            <name>Maven2 Repository</name>
            <url>http://repo1.maven.org/maven2/</url>
        </repository>


        <!--<repository>
          <id>central</id>
          <name>WSO2 Staging Maven2 Repository</name>
          <url>http://stagingrepo.wso2.com/</url>
          <snapshots>
              <enabled>false</enabled>
          </snapshots>
          <releases>
              <enabled>true</enabled>
              <updatePolicy>never</updatePolicy>
              <checksumPolicy>fail</checksumPolicy>
          </releases>
      </repository>
      <repository>
          <id>eviwarePluginRepository</id>
          <url>http://www.eviware.com/repository/maven2/</url>
      </repository>  -->
        <!--  <repository>
           <id>wso2-maven2-repository</id>
           <name>WSO2 Maven2 Repository</name>
           <url>http://dist.wso2.org/maven2</url>
           <snapshots>
               <enabled>false</enabled>
           </snapshots>
           <releases>
               <enabled>true</enabled>
               <updatePolicy>never</updatePolicy>
               <checksumPolicy>fail</checksumPolicy>
           </releases>
       </repository> -->
        <!--
                <repository>
                    <id>selenium-repo</id>
                    <name>Selenium Maven2 Repository</name>
                    <url>http://repo1.maven.org/maven2/org/seleniumhq/selenium/</url>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>never</updatePolicy>
                        <checksumPolicy>fail</checksumPolicy>
                    </releases>
                </repository>
        -->
    </repositories>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.5</source>
                        <target>1.5</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.5</source>
                        <target>1.5</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.7.2</version>
                    <configuration>
                        <skip>${maven.test.skip}</skip>
                        <!--<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</argLine>-->
                        <!--<groups>bps,bps1</groups>-->
                        <testFailureIgnore>true</testFailureIgnore>
                        <disableXmlReport>false</disableXmlReport>
                        <includes>
                            <include>**/**TestSuite.java</include>
                        </includes>
                        <excludes>
                            <exclude>**/AddNewTenantTest.java</exclude>
                            <exclude>**/*Abstract*.java</exclude>
                            <exclude>**/*CryptoUtilTest*.java</exclude>
                            <exclude>**/SystemIntegrationTestCase.java</exclude>
                        </excludes>
                        <systemProperties>
                            <maven.test.skip>true</maven.test.skip>
                            <property>
                                <name>system.test.sample.location</name>
                                <value>
                                    ${user.dir}/core/org.wso2.automation.platform.core/src/main/resources
                                </value>
                            </property>
                            <property>
                                <name>stratos.key.resource.location</name>
                                <value>
                                    ${basedir}/src/test/resources/
                                </value>
                            </property>
                        </systemProperties>

                        <properties>
                            <maven.test.skip>true</maven.test.skip>
                            <property>
                                <name>usedefaultlisteners</name>
                                <value>false</value>
                            </property>
                            <property>
                                <name>listener</name>
                                <value>
                                    org.wso2.platform.test.core.PlatformTestManager,org.wso2.platform.test.core.PlatformSuiteManager,org.wso2.platform.test.core.PlatformReportManager,org.wso2.platform.test.core.PlatformExecutionManager
                                </value>
                            </property>
                        </properties>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>2.1.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>stage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.activemq.tooling</groupId>
                    <artifactId>maven-activemq-plugin</artifactId>
                    <version>5.4.3</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven-jxr-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven-pmd-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>${maven-plugin-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>cim</report>
                            <report>distribution-management</report>
                            <report>index</report>
                            <report>issue-tracking</report>
                            <report>license</report>
                            <report>mailing-list</report>
                            <report>project-team</report>
                            <report>scm</report>
                            <report>summary</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-report-plugin.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report-only</report>
                        </reports>
                    </reportSet>
                </reportSets>

            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>${cobertura-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jdepend-maven-plugin</artifactId>
                <version>${jdepend-maven-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>${taglist-maven-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>

    <properties>
        <maven.test.skip>true</maven.test.skip>
        <stub.version>4.0.0-SNAPSHOT</stub.version>
        <maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
        <maven-jxr-plugin.version>2.2</maven-jxr-plugin.version>
        <maven-pmd-plugin.version>2.5</maven-pmd-plugin.version>
        <maven-project-info-reports-plugin.version>2.3.1</maven-project-info-reports-plugin.version>
        <maven-plugin-plugin.version>2.4.3</maven-plugin-plugin.version>
        <maven-surefire-report-plugin.version>2.11</maven-surefire-report-plugin.version>
        <cobertura-maven-plugin.version>2.4</cobertura-maven-plugin.version>
        <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
        <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
    </properties>
</project>
